--- a/app/views/site_tools/deleted.erb
+++ b/app/views/site_tools/deleted.erb
@@ -1,5 +1,5 @@
 <% title "Deleted tools by #{@site.title}" %>
-<section id="content" class="main site">
+<section id="content" class="main site deleted">
   <%= render 'sites/header' %>
   <%= render :partial => "sites/tools", :object => @usings %>
 </section>
