--- a/app/views/site_tools/show.html.erb
+++ b/app/views/site_tools/show.html.erb
@@ -1,5 +1,5 @@
 <% title "About #{@site.title} using #{@tool.name}" %>
-<section id="content" class="main site">
+<section id="content" class="main site single-site-tool">
   <%= render 'sites/header' %>
 
   <section class="tab">
