--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,27 +21,31 @@
   </script>
   <%- end -%>
 </head>
-<body class="<%= yield(:body_classes) %> <%= [params[:controller], params[:action]].join("-") %>">
+<body class="<%= yield(:body_classes) %> <%= params[:controller] %> <%= [params[:controller], params[:action]].join("-") %>">
 <header class="group">
   <div class="container">
     <hgroup id="title">
       <p><a href="<%= beta_url %>">Line Of <span>Thought</span></a></p>
-      <span>Tracking what powers the web</span>
+      <span>Tracking what powers the web!</span>
     </hgroup>
-    <ul id="current_user">
-      <% if logged_in? %>
-        <li><%= link_to "Logout", destroy_user_session_path %></li>
-        <li><%= link_to "Account", edit_user_registration_path %></li>
-      <% else %>
-        <li><a href="<%= new_user_session_url(:secure => Settings.force_ssl) %>">Sign In</a></li>
-        <li><a href="<%= new_user_registration_url(:secure => Settings.force_ssl) %>">Sign Up</a></li>
-      <% end %>
-    </ul>
+    <div id="search" class="group">
+      <form action="/search" method="get">
+        <input type="text" name="search" value="<%= params[:search] %>" placeholder="Search for a site or tool..." />
+        <input type="submit" value="Search" />
+      </form>
+    </div>
     <nav>
       <ul>
-        <li><a href="<%= sites_url %>">Sites</a></li>
-        <li><a href="<%= tools_url %>">Tools</a></li>
-        <li><a href="<%= bookmarks_url %>">Bookmarks</a></li>
+        <li class="sites"><a href="<%= sites_url %>">Sites</a></li>
+        <li class="tools"><a href="<%= tools_url %>">Tools</a></li>
+        <li class="bookmarks"><a href="<%= bookmarks_url %>">Bookmarks</a></li>
+        <% if logged_in? %>
+          <li class="profile"><%= link_to "Account", edit_user_registration_path %></li>
+          <li><%= link_to "Logout", destroy_user_session_path %></li>
+        <% else %>
+          <li class="sign-in"><a href="<%= new_user_session_url(:secure => Settings.force_ssl) %>">Sign In</a></li>
+          <li class="sign-up"><a href="<%= new_user_registration_url(:secure => Settings.force_ssl) %>">Sign Up</a></li>
+        <% end %>
       </ul>
     </nav>
   </div>
