--- a/app/views/sites/_form.erb
+++ b/app/views/sites/_form.erb
@@ -4,6 +4,7 @@
     <%= f.input :url, :as => :string, :required => true, :label => "Site URL", :hint => "Root site URL. Don't add multiple URLs within the same domain.", :input_html => { :disabled => true } %>
     <%= f.input :title, :as => :string, :required => true, :label => "Site Title", :hint => "Short name for this site. Don't go SEO crazy on this one - it doesn't matter. ex: Yahoo, Twitter, Google." %>
     <%= f.input :description, :as => :text, :required => false, :label => "About this Site", :input_html => { :rows => 3 } %>
+    <%= f.input :locked, :as => :boolean, :required => false, :label => "Prevent future edits?", :hint => "Only users who can claim this site will be able to add or modify the tools used on this site." %>
     <%= f.input :display_location, :as => :string, :required => false, :label => "Location text to show", :hint => "Usually just city state, like Orlando, FL." %>
     <%= f.input :location, :as => :string, :required => false, :label => "Location for maps", :hint => "Be as exact as you want. If you're running this site out of your house, might want to leave this as your city/state, or your zip code." %>
   <% end %>
