--- a/app/views/sites/_tools.erb
+++ b/app/views/sites/_tools.erb
@@ -1,4 +1,5 @@
 <section class="tab">
+  <a name="add_new_tool"></a>
   <% if @site.tools_count > 0 %>
   <div class="title_bar group">
     <% description "We know of #{pluralize(tools.length, "tool")} used #{@site.title} (#{@site.url})." %>
@@ -12,6 +13,17 @@
     </div>
   </div>
 
+  <% if !logged_in? || current_user.can_add_lines?(@site) %>
+    <p class="add_more">Want to add a tool used on this site? <a href="#add_new_tool" class="add_another_tool">Add it here</a></p>
+    <section id="new_using_form" style="display:none;" class="add_in_place">
+      <% if logged_in? && current_user.can_add_lines?(@site) %>
+        <%= render 'site_tools/form' %>
+      <% elsif !logged_in? %>
+        <p class="main_message">You must <%= link_to "sign in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %> to add a tool.</p>
+      <% end %>
+    </section>
+  <% end %>
+
   <ul id="site-tools-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>">
     <%= render :partial => 'usings/using_tool', :collection => tools %>
   </ul>
@@ -19,13 +31,8 @@
     <ul id="site-tools-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>"></ul>
     <p class="main_message">We don't know of any tools used by <strong><%= @site.title %></strong>.</p>
   <% end %>
-  <p class="add_more">Want to add a tool used on this site? <a href="#add_new_tool" class="add_another_tool">Add it here</a></p>
-  <section id="new_using_form" style="display:none;" class="add_in_place">
-    <a name="add_new_tool"></a>
-    <% if logged_in? %>
-      <%= render 'site_tools/form' %>
-    <% else %>
-      <p class="main_message">You must <%= link_to "sign in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %> to add a tool.</p>
-    <% end %>
-  </section>
+
+  <% if @site.tools_count > 10 %>
+    <p class="add_more">Want to add a tool used on this site? <a href="#add_new_tool" class="add_another_tool">Add it here</a></p>
+  <% end %>
 </section>
