--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -144,18 +144,22 @@ body.popup {background-color: #E3E3E3}
 body.popup .container {max-width: 600px}
 .group:after {content: "."; display: block; height: 0; clear: both; visibility: hidden}
 ul {list-style: none; margin: 0; padding: 0}
- header {display: block; background-color: #222; border-top: 6px solid #68aff3; height: 100px; border-bottom: 3px solid #68aff3}
-#title p a {display: block; color: #eee; font-size: 30px; padding-top: 12px}
+ header {display: block; background-color: #222; border-top: 4px solid #68aff3; height: 70px; border-bottom: 2px solid #ccc}
+#title p a {display: block; color: #eee; font-size: 24px; padding-top: 6px}
 #title p a:hover {color: #ccc}
 #title p a span {color: #68aff3; font-size: 100%}
 #title p a:hover span {color: #4B81B4}
-#title span {font-size: 20px; color: #9c9c9c}
- nav {display: block; position: absolute; right: 0; bottom: 0; width: 724px}
+#title span {font-size: 18px; color: #9c9c9c}
+ nav {display: block; position: absolute; right: 0; top: 0; width: 724px}
 nav ul {float: right}
 nav ul li {float: left}
-nav ul li a:link, nav ul li a:visited {display: block; background-color: #68aff3; color: #fff}
-nav ul li a {padding: .6em 1.4em; font-size: 14px; margin-left: 1em}
-nav ul li a:hover {background-color: #4b81b4}
+nav ul li a:link, nav ul li a:visited {display: block; color: #ddd}
+nav ul li a {padding: 6px 6px; font-size: 14px; margin-left: 4px}
+nav ul li a:hover {background-color: #68aff3; color: #eee}
+#search {position: absolute; bottom: 6px; right: 0; display: none}
+#search form {width: 400px; float: right; font-size: 13px}
+#search form input[type=text] {width: 200px; background-color: #ddd; border: 1px solid #666}
+#search form input[type=text]:focus {background-color: #fff}
 #current_user {display: block; position: absolute; right: 0; top: 30px}
 #current_user li {font-size: 14px; float: right; padding-left: 1em}
 #current_user li a:hover {color: #ccc}
@@ -194,6 +198,8 @@ footer section.main-footer {width: 700px}
 footer section.sidebar {width: 260px; float: right}
 footer section h3 {color: #E2DDDC; font-size: 10px; text-transform: uppercase}
 footer section.main-footer p {color: #bbb}
+body.sites nav ul li.sites a, body.tools nav ul li.tools a, body.bookmarks nav ul li.bookmarks a, body.authentications nav ul li.profile a, body.profiles nav ul li.profile a, body.tool_sites nav ul li.tools a, body.site_tools nav ul li.sites a, body.site_claims nav ul li.sites a, body.sessions nav ul li.sign-in a, body.registrations nav ul li.profile a {background-color: #68aff3; color: #eee}
+.bookmarks {display: none}
 .clear {clear: both}
 .right {float: right}
 p.breadcrumbs {font-size: 8px}
@@ -354,6 +360,7 @@ body.site_tools-show .sublist li.ind .actions li.comments {display: none}
 .sublist li.ind .actions li.edit-in-place-cancel {display: none}
 .sublist li.ind.editing .actions li.edit-in-place-cancel {display: inline}
 .sublist li.ind.editing .actions .edit-in-place-edit {display: none}
+section.deleted li.edit-in-place-edit, section.single-site-tool li.edit-in-place-edit {display: none}
 .edit-in-place:hover .actions {display: block}
  section.add_in_place {border-top: 1px solid #ccc}
 p.add_more {text-align: center; font-size: 18px; color: #555; margin: 14px 0}
