--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -32,15 +32,15 @@ ul {
 header {
   display: block;
   background-color: #222;
-  border-top: 6px solid #68aff3;
-  height: 100px;
-  border-bottom: 3px solid #68aff3; }
+  border-top: 4px solid #68aff3;
+  height: 70px;
+  border-bottom: 2px solid #ccc; }
 
 #title p a {
   display: block;
   color: #eee;
-  font-size: 30px;
-  padding-top: 12px; }
+  font-size: 24px;
+  padding-top: 6px; }
 
 #title p a:hover {
   color: #ccc; }
@@ -53,7 +53,7 @@ header {
   color: #4B81B4; }
 
 #title span {
-  font-size: 20px;
+  font-size: 18px;
   color: #9c9c9c; }
 
 /* navigation */
@@ -61,7 +61,7 @@ nav {
   display: block;
   position: absolute;
   right: 0;
-  bottom: 0;
+  top: 0;
   width: 724px; }
 
 nav ul {
@@ -72,16 +72,35 @@ nav ul li {
 
 nav ul li a:link, nav ul li a:visited {
   display: block;
-  background-color: #68aff3;
-  color: #fff; }
+  color: #ddd; }
 
 nav ul li a {
-  padding: .6em 1.4em;
+  padding: 6px 6px;
   font-size: 14px;
-  margin-left: 1em; }
+  margin-left: 4px; }
 
 nav ul li a:hover {
-  background-color: #4b81b4; }
+  background-color: #68aff3;
+  color: #eee; }
+
+#search {
+  position: absolute;
+  bottom: 6px;
+  right: 0;
+  display: none; }
+
+#search form {
+  width: 400px;
+  float: right;
+  font-size: 13px; }
+
+#search form input[type=text] {
+  width: 200px;
+  background-color: #ddd;
+  border: 1px solid #666; }
+
+#search form input[type=text]:focus {
+  background-color: #fff; }
 
 #current_user {
   display: block;
@@ -254,3 +273,19 @@ footer section h3 {
 
 footer section.main-footer p {
   color: #bbb; }
+
+body.sites nav ul li.sites a,
+body.tools nav ul li.tools a,
+body.bookmarks nav ul li.bookmarks a,
+body.authentications nav ul li.profile a,
+body.profiles nav ul li.profile a,
+body.tool_sites nav ul li.tools a,
+body.site_tools nav ul li.sites a,
+body.site_claims nav ul li.sites a,
+body.sessions nav ul li.sign-in a,
+body.registrations nav ul li.profile a {
+  background-color: #68aff3;
+  color: #eee; }
+
+.bookmarks {
+  display: none; }
