--- a/public/stylesheets/list.css
+++ b/public/stylesheets/list.css
@@ -277,6 +277,9 @@ body.site_tools-show .sublist li.ind .actions li.comments {
 .sublist li.ind.editing .actions .edit-in-place-edit {
   display: none; }
 
+section.deleted li.edit-in-place-edit, section.single-site-tool li.edit-in-place-edit {
+  display: none; }
+
 .edit-in-place:hover .actions {
   display: block; }
 
