--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
   <div class="container">
     <hgroup id="title">
       <p><a href="<%= beta_url %>">Line Of <span>Thought</span></a></p>
-      <span>Tracking what powers the web!</span>
+      <span>Tracking what powers the web</span>
     </hgroup>
     <div id="search" class="group">
       <form action="/search" method="get">
