--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -30,6 +30,25 @@ a:link, a:visited {
   outline-width: medium;
   text-decoration: none; }
 
+section.text p, section.text h3 {
+  margin: .5em 1em; }
+
+section.text ul, section.text ol {
+  margin: 1em 1em 1em 1.4em;
+  padding: 0 1em; }
+
+section.text ul {
+  list-style: disc outside; }
+
+section.text ol {
+  list-style: decimal outside; }
+
+section.text ol li {
+  margin-bottom: .5em; }
+
+section.text ul li p, section.text ol li p {
+  margin: 1em 0; }
+
 /* home */
 section.announcement {
   margin-bottom: 1em; }
@@ -255,3 +274,11 @@ body.site_tools-deleted li.site_tools-deleted a:link, body.site_tools-deleted li
 
 .titleless li.ind:first-child {
   border-top: none; }
+
+button.loading {
+  display: none; }
+
+.loading button.loading {
+  display: inline;
+  padding-right: 18px;
+  background: url(/images/indicator.gif) no-repeat right; }
