Added static css/js

--- a/app/views/bookmarks/_related.erb
+++ b/app/views/bookmarks/_related.erb
@@ -1,4 +1,4 @@
-<aside class="admin">
+<aside class="admin bookmarks">
   <h3>Related Bookmark</h3>
   <ul class="lst">
     <% related.each do |bookmark| %>
