--- a/app/stylesheets/forms.scss
+++ b/app/stylesheets/forms.scss
@@ -33,8 +33,8 @@ form.formtastic fieldset { border:0; background:none; padding-bottom:0px; }
 .editing p.about { display:none; }
 
 li.tool_name_autocomplete .inline-hints { display:none; }
-input.autocomplete-toolname { padding-left:26px; background:url(/images/placeholder.jpg) no-repeat 4px 4px; width:520px; }
-body.popup input.autocomplete-toolname { width:452px; }
+input.autocomplete-toolname, input.autocomplete-sitetitle { padding-left:26px; background:url(/images/placeholder.jpg) no-repeat 4px 4px; width:520px; }
+body.popup input.autocomplete-toolname, body.popup input.autocomplete-sitetitle { width:452px; }
 
 /* Jquery UI for autocomplete */
 .ui-widget-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
