--- a/app/views/tools/_add_bookmark.erb
+++ b/app/views/tools/_add_bookmark.erb
@@ -1,4 +1,4 @@
-<aside>
+<aside class="bookmarks">
   <h3>Add an Bookmark</h3>
   <p>Know of a blog post or video about <%= tool.name %>?</p>
   <p><%= link_to "Add an Bookmark about #{tool.name}", new_bookmark_path %></p>
