--- a/app/views/tools/_show_sidebar.erb
+++ b/app/views/tools/_show_sidebar.erb
@@ -1,5 +1,24 @@
 <sidebar>
+  <aside>
+    <h3>Your Permissions</h3>
+      <% if logged_in? && current_user.can_edit_tool?(@tool) %>
+        <ul class="lst">
+          <li><%= link_to "Edit this tool", edit_tool_path(@tool) %></li>
+          <li><a href="#add_new_site" class="add_another_site">Add another site</a></li>
+          <li><%= link_to "Undelete sites", deleted_tool_sites_path(@tool) %></li>
+        
+          <% if current_user.can_destroy_tool?(@tool) %>
+            <li><%= link_to "Delete this tool", tool_path(@tool), :method => :delete, :confirm => "Are you sure you want to delete this site?" %></li>
+          <% end %>
+        </ul>
+      <% else %>
+      <ul class="txt">
+        <li><%= link_to "Sign in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %> to add some sites that use this tool.</li>
+      </ul>
+      <% end %>
+  </aside>
   <%= render :partial => "tools/featured" %>
+  <%= render :partial => "sites/featured" %>
   <%= render :partial => "bookmarks/related", :object => @tool.cached_bookmarks if (@tool.bookmarks_count > 0) && @tool.cached_bookmarks %>
   <%= render :partial => "tools/similar", :object => @similar_tools if @similar_tools %>  
   
