--- a/app/views/tools/_sites.erb
+++ b/app/views/tools/_sites.erb
@@ -1,4 +1,5 @@
 <section class="tab">
+  <a name="add_new_site"></a>
   <% if @tool.sites_count > 0 %>
   <% description "We know of #{pluralize(@tool.sites_count, "site")} using #{@tool.name} (#{@tool.url})." %>
   <div class="title_bar group">
@@ -13,6 +14,18 @@
       </ul>
     </div>
   </div>
+  
+  <% if !logged_in? || current_user.can_add_lines?(@tool) %>
+    <p class="add_more">Want to add a site that uses this tool? <a href="#add_new_site" class="add_another_site">Add it here</a></p>
+    <section id="new_using_form" style="display:none;" class="add_in_place">
+      <% if logged_in? && current_user.can_add_lines?(@tool) %>
+        <%= render 'tool_sites/form' %>
+      <% elsif !logged_in? %>
+        <p class="main_message">You must <%= link_to "sign in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %> to add a site.</p>
+      <% end %>
+    </section>
+  <% end %>
+  
   <ul id="tool-sites-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>">
     <%= render :partial => 'usings/using_site', :collection => sites %>
   </ul>
