Fixes for managing usings from a tool

--- a/app/views/sites/_tools.erb
+++ b/app/views/sites/_tools.erb
@@ -1,6 +1,6 @@
 <section class="tab">
   <a name="add_new_tool"></a>
-  <% if @site.tools_count > 0 %>
+  <% if @site.tools_count > 0 || tools.count > 0 %>
   <div class="title_bar group">
     <% description "We know of #{pluralize(@site.tools_count, "tool")} used #{@site.title} (#{@site.url})." %>
     <h3>We know of <strong><%= pluralize(@site.tools_count, "tool") %></strong> used on <strong><%= @site.title %></strong></h3>
