--- a/app/views/profiles/tools.html.erb
+++ b/app/views/profiles/tools.html.erb
@@ -3,7 +3,7 @@
 <section id="content" class="main">
   <h2><%= @title %></h2>
   <section>
-    <p>Here are all the tools that you have claimed. This includes tools you added to the system.</p>
+    <p>Here are all the tools you added to the system.</p>
     <ul id="tools-list" class="tools main-list">
       <%= render @tools %>
     </ul>
