--- a/app/views/registrations/edit.html.erb
+++ b/app/views/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<% title "Update Your Account" %>
+<% title "Change Email or Password" %>
 
 <section id="content" class="main">
   <h2><%= @title %></h2>
