--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -3,7 +3,9 @@
 <section id="content" class="main">
   <h2><%= @title %></h2>
   <section>
-    This is your public profile. I'm sure we'll show stuff here later on.
+    <ul>
+      <li>Karma: <%= @user.karma %></li>
+    </ul>
   </section>
 </section>
 
