--- a/app/views/sites/_show_sidebar.erb
+++ b/app/views/sites/_show_sidebar.erb
@@ -24,9 +24,31 @@
       <% else %>
       <ul class="txt">
         <li><%= link_to "Sign in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %> to make changes.</li>
+        <li><%= link_to "Sign up", new_user_registration_path %> to add your own site</li>
       </ul>
       <% end %>
   </aside>
+  
+  <% if @site.tools_count > 0 %>
+  <aside>
+    <h3>Share this Site</h3>
+    <ul class="txt">      
+      <li>Share on Twitter
+        <div class="right">
+          <iframe allowtransparency="true" frameborder="0" scrolling="no"
+                  src="http://platform.twitter.com/widgets/tweet_button.html?text=<%= site_share_message(@site) %>"
+                  style="width:110px; height:20px;"></iframe>
+        </div>
+      </li>
+      <li>Like on Facebook
+        <div class="right">
+        <iframe src="http://www.facebook.com/plugins/like.php?href&amp;layout=button_count&amp;show_faces=false&amp;width=100&amp;action=like&amp;font=lucida+grande&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:104px; height:21px;" allowTransparency="true"></iframe>
+        </div>
+      </li>
+      <li><a href="http://www.facebook.com/sharer.php?u=<%=site_url(@site) %>&amp;t=<%= site_share_message(@site) %>" target="_blank"><img src="https://d1mr7he6yibwdu.cloudfront.net/favicons/com.facebook/com.facebook.small.png" class="favicon">Share on Facebook</a></li>
+    </ul>
+  </aside>
+  <% end %>
 
   <% if params[:action] != 'bookmarks' %>
     <%= render :partial => "bookmarks/related", :object => @site.cached_bookmarks if (@site.bookmarks.size > 0) && @site.cached_bookmarks && @site.cached_bookmarks.length > 0 %>
