Added way to like a link on facebook.

--- a/app/views/tools/_show_sidebar.erb
+++ b/app/views/tools/_show_sidebar.erb
@@ -30,7 +30,7 @@
       </li>
       <li>Like on Facebook
         <div class="right">
-        <iframe src="http://www.facebook.com/plugins/like.php?href&amp;layout=button_count&amp;show_faces=false&amp;width=100&amp;action=like&amp;font=lucida+grande&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:104px; height:21px;" allowTransparency="true"></iframe>
+        <iframe src="http://www.facebook.com/plugins/like.php?href=<%= tool_url(@tool) %>&amp;layout=button_count&amp;show_faces=false&amp;width=100&amp;action=like&amp;font=lucida+grande&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:104px; height:21px;" allowTransparency="true"></iframe>
         </div>
       </li>
       <li><a href="http://www.facebook.com/sharer.php?u=<%=tool_url(@tool) %>&amp;t=<%= tool_share_message(@tool) %>" target="_blank"><img src="https://d1mr7he6yibwdu.cloudfront.net/favicons/com.facebook/com.facebook.small.png" class="favicon">Share on Facebook</a></li>
