--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,15 +1,17 @@
 <% title "About Line Of Thought" %>
 <section id="content" class="main">
-  <h2>About Line Of Thought</h2>
-  <p>The idea for Line Of Thought goes back to 2004. I was developing in <%= link_to "ColdFusion", tool_path(:id => "coldfusion") %> at the time and kept running into people posting about how ColdFusion was "dead". Eventually this led to someone creating <a href="http://www.coldfusiondeveloper.com.au/go/top100/">Top 100 ColdFusion Websites</a> and <a href="http://gotcfm.com/">Got CFM</a> which scratched this itch in the CF community.</p>
-  <p>I moved over to the Ruby world shortly after, and they had their <a href="http://rails100.pbworks.com/w/page/8815411/Alexa-Rankings">own version</a>. I was wanting something like this that was cross community. I was also wanting something similar for every other tool I was using that provided much more information.</p>
-  <p>Time and life got in the way, and the site was put aside for a while. Proud to say it's well on it's way and will be launching soon!</p>
+  <article>
+    <h2>About Line Of Thought</h2>
+    <p>The idea for Line Of Thought goes back to 2004. I was developing in <%= link_to "ColdFusion", tool_path(:id => "coldfusion") %> at the time and kept running into people posting about how ColdFusion was "dead". Eventually this led to someone creating <a href="http://www.coldfusiondeveloper.com.au/go/top100/">Top 100 ColdFusion Websites</a> and <a href="http://gotcfm.com/">Got CFM</a> which scratched this itch in the CF community.</p>
+    <p>I moved over to the Ruby world shortly after, and they had their <a href="http://rails100.pbworks.com/w/page/8815411/Alexa-Rankings">own version</a>. I was wanting something like this that was cross community. I was also wanting something similar for every other tool I was using that provided much more information.</p>
+    <p>Time and life got in the way, and the site was put aside for a while. Proud to say it's well on it's way and will be launching soon!</p>
   
-  <h3>What's with the Beta & Invites</h3>
-  <p>The main URL, lineofthought.com, isn't publicly accessible yet until we hammer out a few more things. We're also not allowing sign ups just yet until we get core functionality in. This effectively means the site is in read-only mode until we're ready to launch.</p>
+    <h3>What's with the Beta & Invites</h3>
+    <p>The main URL, lineofthought.com, isn't publicly accessible yet until we hammer out a few more things. We're also not allowing sign ups just yet until we get core functionality in. This effectively means the site is in read-only mode until we're ready to launch. If you'd like to get an invite code, add your email to the <a href="/">subscriptions list</a> and we'll get back to you.</p>
   
-  <h3>Contact Us</h3>
-  <p>If you're looking to get in touch with us with a question, comment, suggestion, advertising opportunity or anything else? Shoot me (<a href="http://adamfortuna.com">Adam</a>) an email at <a href="mailto:contact@lineofthought.com">contact@lineofthought.com</a> and I'll get back to you. I'm sometimes on AIM as <strong>lineofadam</strong> too.</p>
+    <h3>Contact Us</h3>
+    <p>If you're looking to get in touch with us with a question, comment, suggestion, advertising opportunity or anything else? Shoot me (<a href="http://adamfortuna.com">Adam</a>) an email at <a href="mailto:contact@lineofthought.com">contact@lineofthought.com</a> and I'll get back to you. I'm sometimes on AIM as <strong>lineofadam</strong> too.</p>
+  </article>
 </section>
 
 <sidebar>
